<?xml version="1.0"?>
<package format="2">
  <name>slam_rover</name>
  <version>0.0.1</version>
  <description>This package describes a mobile robot that performs SLAM.</description>

  <author email="S2H.Mobile@gmail.com">Stephan Hohne</author>
  <maintainer email="S2H.Mobile@gmail.com">Stephan Hohne</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/S2H-Mobile/RoboND-SLAM-Project</url>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
